# HW_WEB_modul_12

HW_12/: main.py  pyproject.toml
HW_12/migrations/: env.py
HW_12/src/conf/: config.py
HW_12/src/database/: db.py
HW_12/src/entity/: models.py
HW_12/src/repository/: contacts.py  users.py
HW_12/src/routes/: auth.py  contacts.py
HW_12/src/schemas/: contact.py  user.py
HW_12/src/services/: auth.py
